--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -13,7 +13,6 @@ var game = new Phaser.Game(1334,750, Phaser.AUTO, '',
 { preload: preload, create: create, update: update, render: render });
 
 /* TODO
-5second timer for dead stuff
 reset deadT when we drag
 rotten food. add a variable to food now to see if its rotten or not
 Add items to points
@@ -67,7 +66,7 @@ var atexst2;
 var text1;
 var text2;
 var text3;
-var num1;
+var num1=0;
 var crunchtime=false;
 var spawnY=165;
 var p=true;
@@ -209,6 +208,8 @@ function create()
         //allow toato to be dragged
         aTomato.inputEnabled = true; 
         aTomato.input.enableDrag(true);
+		aTomato.events.onDragStart.add(resetTimer1, this);
+		aTomato.events.onDragStop.add(resetTimer2, this);
         aTomato.events.onOutOfBounds.add(resetTomato, this);
     }
 	for (var i = 0; i < 3; i++)
@@ -242,6 +243,8 @@ function create()
         //allow toato to be dragged
         aWing.inputEnabled = true; 
         aWing.input.enableDrag(true);
+		aWing.events.onDragStart.add(resetTimer1, this);
+		aWing.events.onDragStop.add(resetTimer2, this);
         aWing.events.onOutOfBounds.add(resetWing, this);
     }
 	for (var i = 0; i < 3; i++)
@@ -275,6 +278,8 @@ function create()
         //allow toato to be dragged
         aPepper.inputEnabled = true; 
         aPepper.input.enableDrag(true);
+		aPepper.events.onDragStart.add(resetTimer1, this);
+		aPepper.events.onDragStop.add(resetTimer2, this);
         aPepper.events.onOutOfBounds.add(resetPepper, this);
     }
 	//spawn all the steak but they are no visible yet
@@ -305,6 +310,8 @@ function create()
 		aSteak.events.onOutOfBounds.add(resetSteak, this);
 		//allow toato to be dragged
 		aSteak.inputEnabled = true; 
+		aSteak.events.onDragStart.add(resetTimer1, this);
+		aSteak.events.onDragStop.add(resetTimer2, this);
 		aSteak.input.enableDrag(true);
     }
 	//spawn all the potato but they are no visible yet
@@ -334,6 +341,8 @@ function create()
         aPotato.events.onOutOfBounds.add(resetPotato, this);
         //allow toato to be dragged
         aPotato.inputEnabled = true; 
+		aPotato.events.onDragStart.add(resetTimer1, this);
+		aPotato.events.onDragStop.add(resetTimer2, this);
         aPotato.input.enableDrag(true);
     }
 	//spawn all the celeries but they are no visible yet
@@ -362,7 +371,9 @@ function create()
         aCelery.checkWorldBounds = true;
         aCelery.events.onOutOfBounds.add(resetPotato, this);
         //allow toato to be dragged
-        aCelery.inputEnabled = true; 
+        aCelery.inputEnabled = true;  
+		aCelery.events.onDragStart.add(resetTimer1, this);
+		aCelery.events.onDragStop.add(resetTimer2, this);
         aCelery.input.enableDrag(true);
     }
 
@@ -518,12 +529,10 @@ function create()
 function setDragT()
 {
 	isDrag=true;
-	num1='down';
 }
 function setDragF()
 {
 	isDrag=false;
-	num1='up';
 }
 
 function beginGame()
@@ -756,6 +765,14 @@ function isCutting(obj){
 		obj.body.velocity.x=0;
 		obj.body.velocity.y=0;
 	}
+}
+function resetTimer1(obj)
+{
+	obj.deadT=-999999999;
+}
+function resetTimer2(obj)
+{
+	obj.deadT=0;
 }
 function setPause(obj)
 {
@@ -1303,11 +1320,14 @@ function resetTomato(item)
 	aTomato.deadT = 0;
 	//activate world bounds with the object so that it can die when its complete
     aTomato.checkWorldBounds = true;
+	
 	aTomato.body.bounce.set(1);
 	//allow toato to be dragged
     aTomato.inputEnabled = true; 
     aTomato.input.enableDrag(true);
-    aTomato.events.onOutOfBounds.add(resetTomato, this);
+	aTomato.events.onDragStart.add(resetTimer1, this);
+	aTomato.events.onDragStop.add(resetTimer2, this);    
+	aTomato.events.onOutOfBounds.add(resetTomato, this);
 
 }
 function resetWing(item)
@@ -1347,6 +1367,8 @@ function resetWing(item)
 	//allow toato to be dragged
     aWing.inputEnabled = true; 
     aWing.input.enableDrag(true);
+	aWing.events.onDragStart.add(resetTimer1, this);
+	aWing.events.onDragStop.add(resetTimer2, this);
     aWing.events.onOutOfBounds.add(resetWing, this);
 
 }
@@ -1387,6 +1409,8 @@ function resetPepper(item)
 	//allow toato to be dragged
     aPepper.inputEnabled = true; 
     aPepper.input.enableDrag(true);
+	aPepper.events.onDragStart.add(resetTimer1, this);
+	aPepper.events.onDragStop.add(resetTimer2, this);
     aPepper.events.onOutOfBounds.add(resetPepper, this);
 
 }
@@ -1427,6 +1451,8 @@ function resetSteak(item)
 	aSteak.events.onOutOfBounds.add(resetSteak, this);
 	//allow toato to be dragged
     aSteak.inputEnabled = true; 
+	aSteak.events.onDragStart.add(resetTimer1, this);
+	aSteak.events.onDragStop.add(resetTimer2, this);
     aSteak.input.enableDrag(true);
 }
 function resetPotato(item)
@@ -1465,6 +1491,8 @@ function resetPotato(item)
 	aPotato.events.onOutOfBounds.add(resetPotato, this);
 	//allow toato to be dragged
     aPotato.inputEnabled = true; 
+	aPotato.events.onDragStart.add(resetTimer1, this);
+	aPotato.events.onDragStop.add(resetTimer2, this);
     aPotato.input.enableDrag(true);	
 
 }
@@ -1504,6 +1532,8 @@ function resetCelery(item)
 	aCelery.events.onOutOfBounds.add(resetCelery, this);
 	//allow toato to be dragged
     aCelery.inputEnabled = true; 
+	aCelery.events.onDragStart.add(resetTimer1, this);
+	aCelery.events.onDragStop.add(resetTimer2, this);
     aCelery.input.enableDrag(true);	
 
 }
@@ -1511,7 +1541,7 @@ function render() {
 
    // game.debug.text('dish: '+atexst,32,62);
    // game.debug.text('item: '+atexst2,422,62);
-   //game.debug.text('text: '+isDrag,32,82);
+   game.debug.text('text: '+num1,32,82);
    // game.debug.text('needs tomato '+text2,32,102);
    // game.debug.text('needs steak '+text3,32,122);
 	
