fixed CELERY!! and -50 for cutting rotten food

--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -528,6 +528,11 @@ function update()
 }
 function isCutting(obj){
 	if(game.input.x > obj.body.x && game.input.x < obj.body.right && game.input.y > obj.body.y && game.input.y < obj.body.bottom && isDrag){
+		
+		if(obj.isRot===true&&obj.alive===true)
+		{
+			score-=50;
+		}
 		obj.alive=false;
 		obj.body.velocity.x=0;
 		obj.body.velocity.y=0;
@@ -555,12 +560,13 @@ function setPause(obj)
 }
 function setDead(obj)
 {
-	//if(isDrag)
-	//{
-		obj.alive=false;
-		obj.body.velocity.x=0;
-		obj.body.velocity.y=0;	
-	//}
+	if(obj.isRot===true&&obj.alive===true)
+	{
+		score-=50;
+	}
+	obj.alive=false;
+	obj.body.velocity.x=0;
+	obj.body.velocity.y=0;	
 }
 function dodge(st){
 	
@@ -1292,7 +1298,7 @@ function createCelery()
 	celeries.addChild(aCelery);
 	//activate world bounds with the object so that it can die when its complete
 	aCelery.checkWorldBounds = true;
-	aCelery.events.onOutOfBounds.add(resetPotato, this);
+	aCelery.events.onOutOfBounds.add(resetCelery, this);
 	//allow toato to be dragged
 	aCelery.inputEnabled = true;  
 	aCelery.events.onDragStart.add(resetTimer1, this);
