--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -944,7 +944,7 @@ function collision (obj1, obj2)
 			obj1.fin.children[j].visible = false;
 		}
 		obj1.reset(2000,800);*/
-		aDish.finished = true;
+		obj1.finished = true;
 		compDishes++;
 	}
 	text1 = obj1.i1;
