--- a/InsertNameHere.html
+++ b/InsertNameHere.html
@@ -11,6 +11,7 @@
 <script type="text/javascript"> 
 var game = new Phaser.Game(1334,750, Phaser.AUTO, '', 
 { preload: preload, create: create, update: update, render: render });
+var partical= new Array();
 
 /* TODO
 reset deadT when we drag
